--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Prefect-System</string>
+    <string name="app_name">osd-records-mgt-mobile-appl</string>
 </resources>
